--- a/Day01/helloreact.html
+++ b/Day01/helloreact.html
@@ -2,13 +2,12 @@
     <head>
         <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
         <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
     </head>
     <body>
         <div id="tuesday"></div>
-        <script>
-            //<h1>Hello React</h1>
-            let header = React.createElement("h1", null, "Hello React");
-            ReactDOM.render(header, document.getElementById("tuesday"));
+        <script type="text/jsx">
+          
         </script>
     </body>
 </html>
