--- a/Day01/helloreact.html
+++ b/Day01/helloreact.html
@@ -7,7 +7,10 @@
     <body>
         <div id="tuesday"></div>
         <script type="text/jsx">
-          
+            //JSX
+            //let header = <h1>Hello React in a proper way</h1>;
+            let button = <button>Click</button>;
+            ReactDOM.render(button, document.getElementById("tuesday"));
         </script>
     </body>
 </html>
