--- a/Day01/components.html
+++ b/Day01/components.html
@@ -15,6 +15,11 @@
         <script type="text/jsx">
 
            class Header extends React.Component {
+                constructor(props) {
+                    super(props);
+                    //YOUR CODE GOES HERE
+                }
+               
                 render() {
                     return (<h1>Hello React Component</h1>);
                 }
